# learn-claude-code

rust-agent/: .gitignore  Cargo.toml  candidates.json  config.json  install.ps1  install.sh  package-lock.json  run-a2a.ps1  run-a2a.sh  run.py  rust-agent.ps1  test_429_demo.py  test_a2a_jsonrpc.py
rust-agent/.cargo/: config.toml
rust-agent/.claude/: settings.local.json
rust-agent/cli/: A2A_PROTOCOL_v1.0.md  package-lock.json  package.json  token-optimization-report.md  博德之门3完整规则指南.md  苏教版四年级数学下册_运算律专项练习.md  苏教版四年级课程大纲.md  运算律课件.md
rust-agent/cli/docs/superpowers/plans/: 2026-05-01-token-optimization.md
rust-agent/cli/src/: api.ts  app.tsx  chat.tsx  index.tsx  input.tsx  markdown.tsx  session-utils.ts
rust-agent/cli/tests/: session-utils.test.ts
rust-agent/cli_py/: pyproject.toml
rust-agent/cli_py/rust_agent_cli/: __init__.py  __main__.py  api_client.py  app.py  server.py  session_utils.py  styles.tcss  widgets.py
rust-agent/crates/a2a/: API.md  Cargo.toml
rust-agent/crates/a2a/scripts/: test_a2a.py  test_a2a.rs  test_a2a.sh  test_interactive_multi_turn.py  test_meeting_room_booking.py  test_read_file_summary.py  test_stream.py
rust-agent/crates/a2a/src/: agent_card.rs  errors.rs  executor.rs  extension.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs  streaming.rs  task_runner.rs  types.rs
rust-agent/crates/a2a/tests/: integration.rs
rust-agent/crates/cli/: Cargo.toml
rust-agent/crates/cli/src/: app.rs  event.rs  main.rs
rust-agent/crates/cli/src/ui/: chat.rs  input.rs  mod.rs  status.rs
rust-agent/crates/core/: Cargo.toml
rust-agent/crates/core/src/: agent.rs  anthropic.rs  compact.rs  lib.rs  skills.rs  tools.rs  workspace.rs
rust-agent/crates/core/src/api/: anthropic.rs  error.rs  mod.rs  openai.rs  retry.rs  types.rs
rust-agent/crates/core/src/bots/: mod.rs
rust-agent/crates/core/src/command/: handlers.rs  mod.rs
rust-agent/crates/core/src/context/: compact.rs  history.rs  mod.rs  types.rs
rust-agent/crates/core/src/infra/: circuit_breaker.rs  compact.rs  config.rs  logging.rs  mod.rs  storage.rs  todo.rs  usage.rs  (+3 more)
rust-agent/crates/core/tests/: core_behaviors.rs
rust-agent/crates/mock-llm/: Cargo.toml
rust-agent/crates/mock-llm/src/: main.rs
rust-agent/crates/server/: Cargo.toml
rust-agent/crates/server/src/: broadcaster.rs  main.rs  openai_compat.rs  routes.rs  session.rs  sse.rs
rust-agent/desktop/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.ts
rust-agent/desktop/src/: index.css
rust-agent/desktop/src-tauri/: Cargo.toml  tauri.conf.json
rust-agent/desktop/src-tauri/capabilities/: default.json
rust-agent/desktop/src-tauri/src/: main.rs
rust-agent/desktop/src/api/: client.ts
rust-agent/desktop/src/components/: ChatPage.tsx  InputBox.tsx  MessageList.tsx  Sidebar.tsx
rust-agent/desktop/src/stores/: useChatStore.ts
rust-agent/diagrams/2026-04-28T000000/: diagram.json
rust-agent/diagrams/arch/: diagram.json
rust-agent/docs/: openai-token-cache-protocol.md  todo.md  token-tracking-plan.md
rust-agent/docs/superpowers/plans/: 2026-04-15-context-service-ddd.md  2026-04-15-nodejs-cli.md  2026-04-15-parallel-subagent.md  2026-04-15-slash-commands.md  2026-04-15-tui-redesign.md  2026-04-18-openai-live-test.md  2026-04-19-thinking-compat.md  2026-04-20-a2a-server.md  2026-04-24-curl-tool.md  2026-04-24-token-tracking.md  2026-04-25-shell-provider.md  2026-04-27-bot-session-management.md  2026-04-28-file-edit-enhancement.md  2026-04-28-llm-streaming.md  2026-04-28-session-persistence.md  2026-04-30-cli-session-recovery.md  2026-05-01-core-llm-streaming.md  2026-05-01-web-frontend-plan-a.md  2026-05-01-web-frontend-plan-b.md  2026-05-06-non-streaming-rendering.md  2026-05-06-session-sse-broadcast.md  2026-05-06-web-profile-model-selector.md  2026-05-07-event-source.md
rust-agent/docs/superpowers/specs/: 2026-04-14-context-service-ddd-design.md  2026-04-14-openai-support-design.md  2026-04-15-nodejs-cli-design.md  2026-04-15-tui-redesign-design.md  2026-04-18-openai-live-test-design.md  2026-04-19-thinking-compat-design.md  2026-04-20-a2a-server-design.md  2026-04-24-curl-tool-design.md  2026-04-25-shell-provider-design.md  2026-04-27-bot-session-design.md  2026-04-28-session-persistence-design.md  2026-04-30-cli-session-recovery-design.md  2026-05-01-core-llm-streaming-design.md  2026-05-01-web-frontend-design.md  2026-05-06-non-streaming-rendering-design.md  2026-05-06-web-profile-model-selector-design.md  2026-05-07-event-source-design.md
rust-agent/scripts/: e2e-smoke-test.mjs  rust_agent_client.py  session_persist_smoke_test.ps1
rust-agent/src/: agent.rs  anthropic.rs  lib.rs  main.rs  skillhub.rs  skills.rs  todo.rs  tools.rs  workspace.rs
rust-agent/tests/: core_behaviors.rs
rust-agent/web/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
rust-agent/web/src/: App.tsx  index.css  main.tsx
rust-agent/web/src/api/: client.ts  match.ts  normalize.ts  sse.ts  workspace.ts
rust-agent/web/src/components/: ChatPane.tsx  Composer.tsx  DirectoryPicker.tsx  FilePreview.tsx  FileTree.tsx  MarkdownView.tsx  MessageBubble.tsx  RetryBanner.tsx  SessionList.tsx  WorkspacePanel.tsx
rust-agent/web/src/hooks/: useAutoScroll.ts
rust-agent/web/src/store/: chat.ts  workspace.ts
rust-agent/web/src/types/: ui.ts  wire.ts
(+21 files in other folders)
