[package]
name = "rust-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-recursion = "1.1"
dotenvy = "0.15"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "process", "rt-multi-thread", "time"] }
walkdir = "2.5"
