[project]
name = "rust-agent-cli"
version = "0.1.0"
description = "Textual-based CLI for rust-agent"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.80.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.scripts]
rust-agent-py = "rust_agent_cli.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
