[package]
name = "rust-agent-a2a"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-agent-a2a"
path = "src/main.rs"

[dependencies]
rust-agent-core = { path = "../core" }
anyhow = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "net"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-stream = "0.1"
futures = "0.3"
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
