[package]
name = "rust-agent-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-agent"
path = "src/main.rs"

[dependencies]
rust-agent-core = { path = "../core" }
anyhow = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
termimad = "0.34"
dotenvy = "0.15"
rustyline = "15"
