[package]
name = "rust-agent-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-agent"
path = "src/main.rs"

[dependencies]
rust-agent-core = { path = "../core" }
anyhow = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
dotenvy = "0.15"
