[package]
name = "rust-agent-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-agent-server"
path = "src/main.rs"

[dependencies]
rust-agent-core = { path = "../core" }
anyhow = "1.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "net"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6"
