[package]
name = "rust-agent-desktop"
version = "0.1.0"
description = "Rust Agent Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "rt-multi-thread", "time"] }
portpicker = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = []

[workspace]
